fixing overflow oddities in flexboxes

--- a/styles/map.scss
+++ b/styles/map.scss
@@ -168,6 +168,8 @@ span {
 #mapDetails {
   display: flex;
   overflow-x: auto;
+  width: 100%;
+
 }
 
 article {
